<resources>
    <string name="app_name">splashsreenuiacs</string>
    <string name="nama_app">UI-CAS</string>

    <style name="ui_acs">

        <item name="android:textSize">
            50sp
        </item>

        <item name="android:textColor">
            #000000
        </item>

    </style>

    <string name="ui_acs"> UI-CAS </string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="swipe_left_for_register"> Click Here for Register</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="e_mail">Email</string>
    <string name="tag">Let\'s join us and \nBuild your relationship with others</string>
    <string name="swipe_right_for_login">Swipe Right for Login</string>
    <string name="register">Register</string>
    <string name="re_type_password">Re-type Password</string>
    <string name="your_name">Username</string>
    <string name="title_activity_sign_up">SignUp</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="inputcodey">Input Your Code</string>
    <string name="code">Code</string>
    <string name="input">Input</string>
    <string name="inputname">E-Mail</string>

    <string name="reminder">Menu</string>

    <string name="scan_your_t">

Scan your teacher barcode or Input your code
</string>

    <string name="input_code">

Input Code
</string>

    <string name="codebyteacher">Code By Teacher</string>

    <string name="anda_sudah_">

Anda sudah diabsen pada matkul terkait
</string>

    <string name="tampilkan_k">

Tampilkan Kelas
</string>

    <string name="kembali">

Kembali
</string>

    <string name="kelas">

Kelas
</string>

    <string name="rpl_01">

RPL-01
</string>

    <string name="week_1">

Week 1
</string>

    <!-- strings.xml -->
    <string name="tugas_mater">

Tugas/Materi
</string>

    <!-- strings.xml -->
    <string name="daftar_tuga">

Daftar Tugas
</string>


    <string name="nama_mata_k">

Nama Mata Kuliah
</string>

    <string name="notes">

Notes
</string>

    <string name="notes_1">

Notes 1
</string>

    <string name="nama_notes">

Nama Notes
</string>

    <string name="kalender">

Kalender
</string>

    <string name="agenda">

Agenda
</string>

    <string name="profile">

Profile
</string>

    <string name="are_you_sur">

Are you sure?
</string>

    <string name="yes">

Yes
</string>

    <string name="no">

No
</string>

    <string name="kalender_home">Kalender</string>
    <string name="kelas_home">Kelas</string>
    <string name="tugas_home">Tugas</string>
    <string name="note_home">Note</string>
    <string name="profile_home">Profile</string>
    <string name="logout_home">Logout</string>
    <string name="full_name">Full Name</string>
    <string name="todo">TODO</string>
    <string name="last_name">Last Name</string>
    <string name="first_name">First Name</string>
    <string name="date">Date</string>
    <string name="alamat_email">alamat email</string>
    <string name="npm">NPM</string>
</resources>