<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/activity_inputcode"
    android:background="#FFCD00"
    tools:context=".inputcode">

    <TextView
        android:layout_width="250dp"
        android:layout_height="45dp"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="90dp"
        android:layout_marginTop="250dp"
        android:fontFamily="sans-serif-black"
        android:text="@string/inputcodey"
        android:textColor="@color/black"
        android:textSize="30sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/code1"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:hint="@string/code"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="300dp"
        android:padding="15dp"
        android:inputType="textShortMessage"
        android:background="#FFFFFF"
        android:textSize="15sp" />

    <EditText
        android:id="@+id/name1"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:hint="@string/inputname"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="365dp"
        android:padding="15dp"
        android:inputType="textShortMessage"
        android:background="#FFFFFF"
        android:textSize="15sp" />


    <Button
        android:id="@+id/btn_login"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_below="@id/name1"
        android:background="#808080"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="15dp"
        android:textColor="@android:color/black"
        android:textSize="15sp"
        android:text="@string/input"
        android:textAlignment="center"
        android:gravity="center" />



</RelativeLayout>