<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/act_kelas"
    android:background="#FFFFFF"
    tools:context=".detailkelas">

    <View
        android:id="@+id/rectangle_kese"
        android:layout_width="415dp"
        android:layout_height="45dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="0dp"
        android:background="@drawable/rectangle_1"
        />

    <TextView
        android:id="@+id/rpl_01"
        android:layout_width="150dp"
        android:layout_height="64dp"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="218dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="-15dp"
        android:text="@string/rpl_01"
        android:textAppearance="@style/rpl_01"
        android:gravity="center_vertical"
        />

    <View
        android:id="@+id/rectangle_detail_1"
        android:layout_width="321dp"
        android:layout_height="42dp"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="39dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="90dp"
        android:background="@drawable/buat_detail_kls_1"
        />

    <!-- Week 1 -->
    <TextView
        android:id="@+id/week_1"
        android:layout_width="120dp"
        android:layout_height="40dp"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="54dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="90dp"
        android:text="@string/week_1"
        android:textAppearance="@style/week_1"
        android:gravity="center_vertical"
        />

    <View
        android:id="@+id/rectangle_4"
        android:layout_width="321dp"
        android:layout_height="185dp"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="36dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="160dp"
        android:background="@drawable/buat_detail_kls_2"
        />

    <TextView
        android:id="@+id/tugas_mater"
        android:layout_width="300dp"
        android:layout_height="100dp"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="45dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="200dp"
        android:text="@string/tugas_mater"
        android:textAppearance="@style/tugas_mater"
        android:gravity="center_vertical"
        />

</RelativeLayout>